--- a/Unreal Projects/MyProject/Saved/Config/Windows/Engine.ini
+++ b/Unreal Projects/MyProject/Saved/Config/Windows/Engine.ini
@@ -18,6 +18,8 @@ Paths=../../../Engine/Plugins/MovieScene/MovieRenderPipeline/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/PostSplashScreen/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Experimental/PythonScriptPlugin/Content
+Paths=../../../Engine/Plugins/MegascansPlugin/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -46,4 +48,9 @@ JavaPath=(Path="")
 
 [/Script/LuminPlatformEditor.MagicLeapSDKSettings]
 MLSDKPath=(Path="")
+
+[Oculus.Settings]
+GraphicsAdapter=0
+AudioInputDevice="{0.0.1.00000000}.{c568b68a-6f2a-44d5-ad55-dfa35fd27cd4}"
+AudioOutputDevice="{0.0.0.00000000}.{28d495bf-2833-42cc-8526-f5a2b4fa7f18}"
 
