--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,7 +115,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Geometry/Frebe
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -145,7 +145,9 @@ LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 LastLogListing=LoadErrors
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee
+OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3.BP_FirsbeeV3
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -167,7 +169,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/VirtualRealityBP/Maps
+UNR=../../../../../../Bellecour/Year 2 (2020-2021)/Unity/Project-1(Diegetic_Main_Menu)/Unity_Version/ProjectVR/Unreal_VR_Project/Content/VirtualRealityBP/Maps
 BRUSH=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
 FBX=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
 FBXAnim=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
@@ -975,15 +977,24 @@ Voice.TimeStamp=2020.09.29-21.23.06
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2020.09.29-21.23.03
 MovieSceneCapture.LastCompileMethod=Unknown
+PythonScriptPluginPreload.TimeStamp=2020.09.19-15.54.35
+PythonScriptPluginPreload.LastCompileMethod=Unknown
+PythonScriptPlugin.TimeStamp=2020.09.19-15.54.35
+PythonScriptPlugin.LastCompileMethod=Unknown
+MegascansPlugin.TimeStamp=2020.09.29-09.31.29
+MegascansPlugin.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.09.19-15.37.04
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/Frebe/BP8PickupFrisbee
-MRUItem1=/Game/VirtualRealityBP/Blueprints/BP_MotionController
-MRUItem2=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
+MRUItem0=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
+MRUItem1=/Game/Geometry/Frebe/BP8PickupFrisbee
+MRUItem2=/Game/VirtualRealityBP/Blueprints/BP_MotionController
 MRUItem3=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem4=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -1151,6 +1162,8 @@ BP8PickupFrisbee_C.Navigation=True
 BP8PickupFrisbee_C.VirtualTexture=True
 BP8PickupFrisbee_C.Tags=True
 BP8PickupFrisbee_C.Cooking=True
+BP_FirsbeeV3_C.Tick=True
+BP_FirsbeeV3_C.Default=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1274,8 +1287,11 @@ bConvertSceneUnit=False
 [AssetEditorToolkitTabLocation]
 /Game/Geometry/Frebe/10505_Frisbee_v3_L3.10505_Frisbee_v3_L3=1
 /Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee=1
-/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController=1
+/Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[PluginBrowser]
+InstalledPlugins=Substance
 
