--- a/Unreal_VR_Project/Saved/Config/Windows/Engine.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/Engine.ini
@@ -18,6 +18,8 @@ Paths=../../../Engine/Plugins/MovieScene/MovieRenderPipeline/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/PostSplashScreen/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
+Paths=../../../Engine/Plugins/Experimental/PythonScriptPlugin/Content
+Paths=../../../Engine/Plugins/MegascansPlugin/Content
 
 [/Script/UnrealEd.UnrealEdEngine]
 TemplateMapInfos=(ThumbnailTexture=Texture2D'"/Engine/Maps/Templates/Thumbnails/Default.Default"',Map="/Engine/Maps/Templates/Template_Default")
@@ -51,12 +53,4 @@ MLSDKPath=(Path="")
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=False
-FilterKeysHotkey=False
-StickyKeysConfirmation=False
-ToggleKeysConfirmation=False
-FilterKeysConfirmation=False
 
