--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,9 +145,7 @@ LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 LastLogListing=LoadErrors
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee
-OpenAssetsAtExit=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3.BP_FirsbeeV3
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -990,10 +988,10 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
-MRUItem1=/Game/Geometry/Frebe/BP8PickupFrisbee
-MRUItem2=/Game/VirtualRealityBP/Blueprints/BP_MotionController
-MRUItem3=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem1=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
+MRUItem2=/Game/Geometry/Frebe/BP8PickupFrisbee
+MRUItem3=/Game/VirtualRealityBP/Blueprints/BP_MotionController
 MRUItem4=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
 
 [DetailCategories]
