--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -988,9 +988,9 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
-MRUItem1=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
-MRUItem2=/Game/Geometry/Frebe/BP8PickupFrisbee
+MRUItem0=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
+MRUItem1=/Game/Geometry/Frebe/BP8PickupFrisbee
+MRUItem2=/Game/VirtualRealityBP/Maps/MotionControllerMap
 MRUItem3=/Game/VirtualRealityBP/Blueprints/BP_MotionController
 MRUItem4=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
 
@@ -1162,12 +1162,40 @@ BP8PickupFrisbee_C.Tags=True
 BP8PickupFrisbee_C.Cooking=True
 BP_FirsbeeV3_C.Tick=True
 BP_FirsbeeV3_C.Default=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
+ProjectileMovementComponent.AssetUserData=True
+ProjectileMovementComponent.Collision=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Mobile=True
+StaticMeshComponent.AssetUserData=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 Object=
+StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee;
@@ -1286,10 +1314,14 @@ bConvertSceneUnit=False
 /Game/Geometry/Frebe/10505_Frisbee_v3_L3.10505_Frisbee_v3_L3=1
 /Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee=1
 /Game/VirtualRealityBP/Blueprints/BP_MotionController.BP_MotionController=0
+/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3.BP_FirsbeeV3=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
+
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 
