--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -142,7 +142,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=MapCheck
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -988,11 +988,12 @@ BlueprintGraph.LastCompileMethod=Unknown
 MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
-MRUItem1=/Game/Geometry/Frebe/BP8PickupFrisbee
-MRUItem2=/Game/VirtualRealityBP/Maps/MotionControllerMap
-MRUItem3=/Game/VirtualRealityBP/Blueprints/BP_MotionController
-MRUItem4=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
+MRUItem0=/Game/Geometry/Frebe/BP8PickupFrisbee
+MRUItem1=/Game/VirtualReality/Materials/orange
+MRUItem2=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
+MRUItem3=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem4=/Game/VirtualRealityBP/Blueprints/BP_MotionController
+MRUItem5=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
 
 [DetailCategories]
 Brush.TransformCommon=True
@@ -1185,21 +1186,101 @@ StaticMeshComponent.MaterialParameters=True
 StaticMeshComponent.HLOD=True
 StaticMeshComponent.Mobile=True
 StaticMeshComponent.AssetUserData=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.RayTracing=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+Wall_Spawned_C.TransformCommon=True
+Wall_Spawned_C.Default=True
+Wall_Spawned_C.Rendering=True
+Wall_Spawned_C.Replication=True
+Wall_Spawned_C.Collision=True
+Wall_Spawned_C.Input=True
+Wall_Spawned_C.Actor=True
+StaticMeshActor.Input=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant2Vector.MaterialExpressionConstant2Vector=True
+MaterialExpressionConstant2Vector.MaterialExpression=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+cube2-0_C.TransformCommon=True
+cube2-0_C.StaticMesh=True
+cube2-0_C.Materials=True
+cube2-0_C.Physics=True
+cube2-0_C.Collision=True
+cube2-0_C.Lighting=True
+cube2-0_C.Rendering=True
+cube2-0_C.Navigation=True
+cube2-0_C.VirtualTexture=True
+cube2-0_C.Tags=True
+cube2-0_C.Cooking=True
+cube2-0_C.Replication=True
+cube2-0_C.Input=True
+cube2-0_C.Actor=True
+BP_PickupCube_C.TransformCommon=True
+BP_PickupCube_C.StaticMesh=True
+BP_PickupCube_C.Materials=True
+BP_PickupCube_C.Physics=True
+BP_PickupCube_C.Collision=True
+BP_PickupCube_C.Lighting=True
+BP_PickupCube_C.Rendering=True
+BP_PickupCube_C.Navigation=True
+BP_PickupCube_C.VirtualTexture=True
+BP_PickupCube_C.Tags=True
+BP_PickupCube_C.Cooking=True
+BP_PickupCube_C.Replication=True
+BP_PickupCube_C.Input=True
+BP_PickupCube_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
-Object=
+Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent=
+ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1322,6 +1403,73 @@ bHideUnrelatedNodes=False
 [PluginBrowser]
 InstalledPlugins=Substance
 
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
