--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,7 +115,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Frebe
+ContentBrowserTab1.SelectedPaths=/Game/VirtualReality/Materials
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -145,7 +145,7 @@ LastLevel=/Game/VirtualRealityBP/Maps/MotionControllerMap
 LastLogListing=MapCheck
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -167,7 +167,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Bellecour/Year 2 (2020-2021)/Unity/Project-1(Diegetic_Main_Menu)/Unity_Version/ProjectVR/Unreal_VR_Project/Content/VirtualRealityBP/Maps
+UNR=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/VirtualRealityBP/Maps
 BRUSH=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
 FBX=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
 FBXAnim=../../../../../../Users/adrie/Documents/GitHub/ProjectVR/Unreal_VR_Project/Content/
@@ -981,8 +981,10 @@ PythonScriptPlugin.TimeStamp=2020.09.19-15.54.35
 PythonScriptPlugin.LastCompileMethod=Unknown
 MegascansPlugin.TimeStamp=2020.09.29-09.31.29
 MegascansPlugin.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2020.09.19-15.37.04
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.09.29-21.22.59
+BlueprintGraph.LastCompileMethod=External
+HierarchicalLODUtilities.TimeStamp=2020.09.29-21.23.02
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
