--- a/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal_VR_Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -115,7 +115,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/VirtualReality/Materials
+ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Maps
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -991,9 +991,9 @@ MRUItem0=/Game/VirtualRealityBP/Maps/MotionControllerMap
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Geometry/Frebe/BP8PickupFrisbee
-MRUItem1=/Game/VirtualReality/Materials/orange
-MRUItem2=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
-MRUItem3=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem1=/Game/VirtualRealityBP/Blueprints/BP_FirsbeeV3
+MRUItem2=/Game/VirtualRealityBP/Maps/MotionControllerMap
+MRUItem3=/Game/VirtualReality/Materials/orange
 MRUItem4=/Game/VirtualRealityBP/Blueprints/BP_MotionController
 MRUItem5=/Game/Geometry/Frebe/10505_Frisbee_v3_L3
 
@@ -1273,14 +1273,15 @@ BP_PickupCube_C.Actor=True
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
-Object="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 StaticMeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Rendering.WireframeColorOverride\" \"Object.Rendering.OverrideMaterials\" \"Object.Rendering.CustomPrimitiveData\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent=
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Geometry/Frebe/BP8PickupFrisbee.BP8PickupFrisbee;
 
